# mycurrency

./: LICENSE  README.md  pyproject.toml
mycurrency/: manage.py
mycurrency/currencies/: admin.py  currency_converter.py  exchange_rate_provider.py  forms.py  models.py  serializers.py  urls.py  views.py
mycurrency/currencies/management/commands/: load_historical_data.py
mycurrency/currencies/migrations/: 0001_initial.py  0002_provider.py  0003_provider_active.py  0004_currencyexchangerate_unique_rate_per_date.py
mycurrency/currencies/templates/: backoffice_converter_page.html
mycurrency/currencies/templates/admin/: index.html
mycurrency/currencies/tests/: conftest.py  test_api_convert_amount.py  test_api_currency_crud.py  test_api_get_exchange_rates.py  test_exchange_rate_loader.py  test_integration_currency_beacon.py  test_provide_exchange_rates.py  test_provider_handler.py
mycurrency/mycurrency/: asgi.py  settings.py  urls.py  wsgi.py
mycurrency/providers/CurrencyBeacon/: __init__.py  tests.py
